--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^19.0.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
+    "react-hot-toast": "^2.5.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1"
   },
